已完成 MCP 与 API 之间的强类型通信接口规范，并实际接入查询与执行链路。 核心协议位于 common/bridge/api： - [McpApiBridge.java (line 12)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-common/src/main/java/com/chatchat/common/bridge/api/McpApiBridge.java:12)：MCP→API 统一通信端口 - [McpApiCall.java (line 11)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-common/src/main/java/com/chatchat/common/bridge/api/McpApiCall.java:11)：统一调用协议 mcp_api_call.v1 - [McpApiResult.java (line 11)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-common/src/main/java/com/chatchat/common/bridge/api/McpApiResult.java:11)：统一返回协议 mcp_api_result.v1 - [McpApiOperation.java (line 4)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-common/src/main/java/com/chatchat/common/bridge/api/McpApiOperation.java:4)：统一查询、执行操作 - [McpApiResultStatus.java (line 4)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-common/src/main/java/com/chatchat/common/bridge/api/McpApiResultStatus.java:4)：统一业务状态 协议现在明确包含： - 调用方与目标服务 - 查询意图或模板 ID - filters / parameters / context - 幂等键和执行截止时间 - Kernel request scope - 完整业务 data - 模板恢复事件 - 通信状态、重试属性和协议版本 原始 URL / method / headers / body 被禁止跨越 MCP/API 桥，MCP 只能传递模板 ID 和 Schema 声明的业务参数。 实际接入情况： - [ApiServiceBridge.java (line 34)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/api/ApiServiceBridge.java:34) 实现模板查询桥。 - [ApiToolSpecFactory.java (line 44)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/api/ApiToolSpecFactory.java:44) 实现模板执行桥。 - [ApiMcpToolPublisher.java (line 47)](D:/IdeaProjects/LangChain4j-AIChat/Langchain4j-Chatchat/chatchat-mcp-server/src/main/java/com/chatchat/mcpserver/api/ApiMcpToolPublisher.java:47) 现在依赖 McpApiBridge 接口，不再直接依赖查询实现类。 - 查询和执行工具元数据都发布输入、输出通信协议版本。 - 旧 Map 返回结构仍通过 toPayload() 投影保留，现有调用方无需立即迁移。 同时扩展了 [KernelProtocolCatalog.java (line 26)](D:/IdeaProjects/LangChain4j-AIChat/Langc